# autoresearch-evaluation-harness

./: .gitignore  CONTRIBUTING.md  README.md  README_en.md  pyproject.toml
.github/workflows/: ci.yml
config/: project.toml
demo_breast_cancer_classification/: eval.py  task.py
demo_bugfix/: buggy_math.py  eval.py
demo_capacity_budget_proxy/: eval.py  task.py
demo_circles_classification/: eval.py  task.py
demo_code_repair/: calculator.py  eval.py  test_calculator.py
demo_deepscientist_local_ui_url/: eval.py  test_ui_url.py  ui_url.py
demo_diabetes_regression/: eval.py  task.py
demo_digits_image_classification/: eval.py  task.py
demo_friedman1_regression/: eval.py
demo_miro_trace_html_escape/: eval.py  renderer.py  test_renderer.py
demo_miro_trace_parser/: eval.py  test_trace_analyzer.py  trace_analyzer.py
demo_optimizer_schedule_proxy/: eval.py  task.py
demo_prompt/: eval.py  prompt.md
demo_target/: eval.py  train.py
demo_ve_gate_proxy/: eval.py  task.py
demo_wine_classification/: eval.py
docs/launch/: 2026-03-28-github-launch-notes.md
programs/: default.md
src/: __init__.py
src/autoresearch_plus/: adapter.py  benchmark.py  bugfix_demo_adapter.py  cli.py  (+24 more)
tests/: test_benchmark.py  test_bugfix_adapter.py  test_chunking.py  test_code_repair_adapter.py  test_composite_adapter.py  test_config.py  test_deepscientist_local_ui_url_adapter.py  test_dl_demo_adapters.py  test_engine.py  test_hypothesis_memory.py  test_ledger_cli.py  test_llm_proposer.py  test_miro_trace_html_escape_adapter.py  test_miro_trace_parser_adapter.py  test_mutator.py  test_prior.py  test_prompt_adapter.py  test_proposers.py  test_saturation_policies.py
(+6 files in other folders)
